[package]
name = "zirko_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["full"] }
zr_app = { git = "https://github.com/zirkonya/zr_app.git", version = "0.1.0", features = ["macros"] }
